--- a/kernels/mtdev/HISTORY
+++ b/kernels/mtdev/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.5
+
 2013-10-09 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS: 1.1.4
 
