--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.29
+
 2014-04-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.27
 
