--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,6 @@
+2014-06-10 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: 4.10.6
+
 2014-03-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 4.10.4
 
