--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,7 @@
+2014-08-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.1.5
+	* DEPENDS: -opengl option removed, does not exist
+
 2014-06-09 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: 2.1.4
 
