--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,8 @@
+2014-08-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.12.0
+	* DEPENDS: gtk+3 added, gtk+2 options fixed
+	* BUILD: added --with-qt=no temporarily
+
 2014-04-23 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.10.7, SECURITY_PATCH=48
 
