--- a/http/webkitgtk3/HISTORY
+++ b/http/webkitgtk3/HISTORY
@@ -1,3 +1,8 @@
+2014-08-02 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: version 2.5.1
+	* CONFIGURE, DEPENDS, BUILD: converted to cmake build system,
+	  added more missing header fixes, some cleanup
+
 2014-07-12 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 2.4.4
 
