--- a/xorg-app/xrandr/HISTORY
+++ b/xorg-app/xrandr/HISTORY
@@ -1,3 +1,6 @@
+2014-08-03  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.3
+
 2014-03-29  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.2
 
