--- a/graphics-libs/mesalib-1x/HISTORY
+++ b/graphics-libs/mesalib-1x/HISTORY
@@ -1,3 +1,6 @@
+2014-08-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 10.2.5
+
 2014-07-18 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: corrected libdrm NOUVEAU sub_depends to NV
 
