--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,8 @@
+2014-08-03 Vlad Glagolev <stealth@sourcemage.org>
+	* PRE_BUILD: apply patch
+	* DEPENDS: lua51 -> LUA
+	* lua52.patch: added, to support both lua 5.1 and 5.2
+
 2014-07-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added libev optional dependency
 
