--- a/xorg-proto/xcb-proto/HISTORY
+++ b/xorg-proto/xcb-proto/HISTORY
@@ -1,3 +1,6 @@
+2014-08-04 Treeve Jelbert <treeve$sourcemage.org>
+	* DETAILS: version 1.11
+
 2013-12-23 Treeve Jelbert <treeve$sourcemage.org>
 	* DETAILS: version 1.10
 
