--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,4 +1,7 @@
-2014-7-18 Treeve Jelbert <treeve@sourcemage.org>
+2014-08-04 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.4
+
+2014-07-18 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.2
 
 2014-07-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
