--- a/kde4-support/phonon/HISTORY
+++ b/kde4-support/phonon/HISTORY
@@ -1,3 +1,6 @@
+2014-08-05 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.7.2, SOURCE_URL[0] updated
+
 2012-03-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* INSTALL: create symlink so backends are found
 
