--- a/kde4-support/phonon-backend-vlc/HISTORY
+++ b/kde4-support/phonon-backend-vlc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-05 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.7.2, SOURCE_URL[0] updated
+
 2013-02-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.6.2, SOURCE_URL[0] updated
 
