--- a/audio-players/qmmp/HISTORY
+++ b/audio-players/qmmp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-06 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.8.1
+
 2014-08-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.8.0
 	* CONFLICTS: added, https://code.google.com/p/qmmp/issues/detail?id=585
