--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2014-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.7.24 (devel)
+
 2014-07-25 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.7.23 (devel)
 
