--- a/python-pypi/formalchemy/HISTORY
+++ b/python-pypi/formalchemy/HISTORY
@@ -1,3 +1,7 @@
+2014-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.5.1
+	* DEPENDS: add python3 support
+
 2012-03-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.4.2
 	  new website &url
