--- a/gnome2-apps/homebank/HISTORY
+++ b/gnome2-apps/homebank/HISTORY
@@ -1,3 +1,6 @@
+2014-08-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 4.6.3; don't duplicate docs
+
 2014-08-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.6.2
 
