--- a/crypto/krb5/HISTORY
+++ b/crypto/krb5/HISTORY
@@ -1,3 +1,6 @@
+2014-08-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.12.1
+
 2013-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.11.3; SECURITY_PATCH++ (CVE-2002-2443)
 
