--- a/disk/partclone/HISTORY
+++ b/disk/partclone/HISTORY
@@ -1,3 +1,6 @@
+2014-08-11 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.2.72
+
 2014-07-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.71
 
