--- a/python-pypi/python-ldap/HISTORY
+++ b/python-pypi/python-ldap/HISTORY
@@ -1,3 +1,7 @@
+2014-08-13 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.4.15; added source hints to skip ssl check
+	  on pypi
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.4.13
 
