--- a/crypto/gnupg-exp/HISTORY
+++ b/crypto/gnupg-exp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.0.26
+
 2014-06-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.25
 
