--- a/devel/libgc/HISTORY
+++ b/devel/libgc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: fix urls
+
 2012-05-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 7.2
 
