--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2014-08-14 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.16.1
+	* info/patches/maintenance_patches_3/patch-3.16.1: added
+
 2014-08-04 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=3.16, LATEST_3=3.16
 	* info/kernels/3.16: added
