--- a/python-pypi/pypdf2/HISTORY
+++ b/python-pypi/pypdf2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.23
+
 2013-12-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.19
 	  url - use pypi
