--- a/python-pypi/scons/HISTORY
+++ b/python-pypi/scons/HISTORY
@@ -1,3 +1,6 @@
+2014-08-14 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.3.2
+
 2014-04-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.3.1
 
