--- a/graphics/lensfun/HISTORY
+++ b/graphics/lensfun/HISTORY
@@ -1,3 +1,6 @@
+2014-08-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.2.8, fix WEB_SITE
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
