--- a/graphics/graphicsmagick/HISTORY
+++ b/graphics/graphicsmagick/HISTORY
@@ -1,3 +1,8 @@
+2013-04-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.3.19
+	* CONFIGURE, BUILD, SUB_DEPENDS, PRE_SUB_DEPENDS: add option for
+	  building graphicsmagick with 16 bit pipeline
+
 2013-06-14 Thomas Orgis <sobukus@sourcemage.org>
 	* DEPENDS: fix X11 dependency (missing space), remove
 	  --disable-ltdl-install, which is not recognized
