--- a/net/iproute2/HISTORY
+++ b/net/iproute2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.16.0
+
 2013-12-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.12.0
 
