--- a/video-libs/xine-lib/HISTORY
+++ b/video-libs/xine-lib/HISTORY
@@ -1,3 +1,6 @@
+2014-08-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.2.6
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.2.3
 
