--- a/video/xine-ui/HISTORY
+++ b/video/xine-ui/HISTORY
@@ -1,3 +1,6 @@
+2014-08-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS, PRE_BUILD: version 0.99.8
+
 2012-06-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.99.7; switched to .xz source
 	* curl.patch: dropped
