--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2014-08-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.1.0
+
 2014-08-04 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.4
 
