--- a/graphics-libs/harfbuzz/HISTORY
+++ b/graphics-libs/harfbuzz/HISTORY
@@ -1,3 +1,6 @@
+2014-08-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.35
+
 2014-07-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.33
 
