--- a/crypto/openssl/HISTORY
+++ b/crypto/openssl/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19 Treeve Jelbert <treeve@sourcemage.org>
+	* PROVIDES, CONFLICTS: added, to allow libressl as na alternative
+
 2014-08-07 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.1i (branch 1.0), 0.9.8zb (branch 0.9);
 	  SECURITY_PATCH++ (9 CVEs)
