--- a/crypto/chntpw/HISTORY
+++ b/crypto/chntpw/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 100627, new WEB_SITE and SOURCE_URL[0]
 
