--- a/crypto/lsh/HISTORY
+++ b/crypto/lsh/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	  fixed long description wrap
