--- a/crypto/opensc/HISTORY
+++ b/crypto/opensc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-08-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.12.2
 
