--- a/crypto/pad/HISTORY
+++ b/crypto/pad/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-01-17 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DEPENDS: created, added openssl as dependency
 
