--- a/crypto/qca-openssl/HISTORY
+++ b/crypto/qca-openssl/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-01-04 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 2.0.0-beta3
 	* PRE_BUILD: Updated patch name
