--- a/crypto/openssh/HISTORY
+++ b/crypto/openssh/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-05-12 Jeremy Blosser <jblosser-smgl@firinn.org>
 	* PRE_BUILD, openssh-lpk-6.5p1-0.3.14.patch.gz: Update the LPK patch.
 
