--- a/crypto/xmlsec/HISTORY
+++ b/crypto/xmlsec/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-05-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.2.18
 
