--- a/crypto/ssldump/HISTORY
+++ b/crypto/ssldump/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-06-16 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: PATCHLEVEL=1, removed BUILD_API=1 and UPDATED
 	* PRE_BUILD, *.patch: added patches from Gentoo
