--- a/crypto/xca/HISTORY
+++ b/crypto/xca/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-12-20 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: version 0.9.1
 
