--- a/archive/burp/HISTORY
+++ b/archive/burp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.18 (devel); readability++
 
