--- a/archive-libs/libarchive/HISTORY
+++ b/archive-libs/libarchive/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-04-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.2
 	  new url & website
