--- a/chat-im/centerim/HISTORY
+++ b/chat-im/centerim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-01-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS, PREPARE, PRE_BUILD: add option for installing
 	  the beta branch
