--- a/chat-im/jabberd/HISTORY
+++ b/chat-im/jabberd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-12-30 Robert Figura <template@sourcemage.org>
 	* DETAILS: updated spell to 2.2.14
 
