--- a/chat-im/licq/HISTORY
+++ b/chat-im/licq/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-03 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: Use get_scm_version
 
