--- a/chat-im/gajim/HISTORY
+++ b/chat-im/gajim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-05-26 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.15.4
 
