--- a/chat-im/prosody/HISTORY
+++ b/chat-im/prosody/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-31 Justin Boffemmyer <flux@sourcemage.org>
 	* DETAILS: version 0.9.4
 
