--- a/chat-im/qutecom/HISTORY
+++ b/chat-im/qutecom/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-01-28 Ismael Luceno <ismael@sourcemage.org>
 	* DEPENDS: depend on LIBAVCODEC instead of ffmpeg
 
