--- a/chat-im/tmsnc/HISTORY
+++ b/chat-im/tmsnc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2007-10-30 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.3.2
 
