--- a/chat-im/psi/HISTORY
+++ b/chat-im/psi/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-01-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.15
 	* DEPENDS: no longer needs QT3 support
