--- a/chat-im/qutim/HISTORY
+++ b/chat-im/qutim/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-07-08 Donald Johnson <minozake@codemage.net>
 	* Removed prepare_cmake_flags() as cmake_build() now calls it.
 
