--- a/chat-irc/ircd-ratbox/HISTORY
+++ b/chat-irc/ircd-ratbox/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-01-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: SECURITY_PATCH=1 (CVE-2012-6084)
 
