--- a/chat-libs/libstrophe/HISTORY
+++ b/chat-libs/libstrophe/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-10-13 Jeremy Blosser <jblosser@sourcemage.org>
 	* DETAILS, DEPENDS, PRE_BUILD: spell created
 
