--- a/chat-libs/tls/HISTORY
+++ b/chat-libs/tls/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-07-07 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: Updated to 1.6
 	* PRE_BUILD: Removed
