--- a/collab/openca/HISTORY
+++ b/collab/openca/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-30-10 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed MD5[0] to SOURCE_HASH
 
