--- a/database/couchdb/HISTORY
+++ b/database/couchdb/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-07-03 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Add http:// to WEB_SITE
 
