--- a/database/libzdb/HISTORY
+++ b/database/libzdb/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.10.6
 
