--- a/database/firebird25/HISTORY
+++ b/database/firebird25/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-03-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5.2.26540-0
 	  SECURITY_PATCH++  - fixes CVE-2013-2492
