--- a/database/mysql-workbench/HISTORY
+++ b/database/mysql-workbench/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-07-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: howl -> -sub COMPAT_HOWL avahi
 
