--- a/database/virtuoso/HISTORY
+++ b/database/virtuoso/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-12-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.1.8
 
