--- a/database/pgadmin3/HISTORY
+++ b/database/pgadmin3/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-12-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.16.1
 
