--- a/database/mysql/HISTORY
+++ b/database/mysql/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2013-03-22 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Add -fpermissive in CXXFLAGS with 5.1.67 (!$OLD) for
 	  extra/yassl/taocrypt/src/Makefile.in
