--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-03-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 9.3.4
 
