--- a/devel/pyside-tools/HISTORY
+++ b/devel/pyside-tools/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-09-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.2.13
 
