--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-07-06 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: python website always forwards to https now and the
 	           certificate doesn't seem to verify
