--- a/devel/radare2/HISTORY
+++ b/devel/radare2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-12-17 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: lua -> lua51
 
