--- a/devel/yaz/HISTORY
+++ b/devel/yaz/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-02-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.0.12
 	  adjust website & url
