--- a/disk/avfs/HISTORY
+++ b/disk/avfs/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-07-15 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.1; quoting paths
 	* BUILD: added, to use AVFS_OPTS
