--- a/disk/boxbackup/HISTORY
+++ b/disk/boxbackup/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-08-25 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.11rc8
 	  converted to upstream signature checking
