--- a/disk/dump/HISTORY
+++ b/disk/dump/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* INSTALL: removed is_depends_enabled.function reference
 
