--- a/disk/libewf/HISTORY
+++ b/disk/libewf/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-01-27 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 20111015, SOURCE, SOURCE_URL[0] and WEB_SITE updated,
 	  SOURCE_HINTS[0] removed
