--- a/disk/testdisk/HISTORY
+++ b/disk/testdisk/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-08-09 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 6.14
 
