--- a/disk/uif2iso/HISTORY
+++ b/disk/uif2iso/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-06-21 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 0.1.7c
 
