--- a/editors/openoffice/HISTORY
+++ b/editors/openoffice/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-08-15 Bor Kraljič <pyrobor@ver.si>
 	* CONFLICTS: it conflicts with libreoffice-bin
 
