--- a/ftp/createtorrent/HISTORY
+++ b/ftp/createtorrent/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-09-06 Elisamuel Resto <ryuji@sourcemage.org>
 	* DETAILS: updated to 1.1.4
 	* DEPENDS, PRE_BUILD: fix building with openssl (needs autoreconf)
