--- a/ftp/aria2/HISTORY
+++ b/ftp/aria2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-02-24 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.18.3
 	  Switched to .xz
