--- a/ftp/dctc/HISTORY
+++ b/ftp/dctc/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2006-11-20 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DEPENDS, CONFIGURE: fixed bug 12219: depend on openssl or
 	* libgcrypt for md4.
