--- a/ftp/gftp/HISTORY
+++ b/ftp/gftp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-04-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: added openssl as opt dep
 
