--- a/ftp/deluge/HISTORY
+++ b/ftp/deluge/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-04-19 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 1.3.5
 	* DEPENDS: pygtk2 & librsvg2 should really be optional
