--- a/ftp/vsftpd/HISTORY
+++ b/ftp/vsftpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-02-27 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 2.3.4
 
