--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-07-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.84; SECURITY_PATCH++
 
