--- a/ftp/tnftp/HISTORY
+++ b/ftp/tnftp/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-10 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 20130505
 	* DEPENDS: added openssl optional dependency
