--- a/gnome2-apps/balsa/HISTORY
+++ b/gnome2-apps/balsa/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-03-03 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 2.5.0
 	* CONFIGURE: added to select html renderer
