--- a/gnome2-libs/gnome-vfs2/HISTORY
+++ b/gnome2-libs/gnome-vfs2/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-06-11 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Fix compilation with newer glib2
 
