--- a/gnome2-libs/libgnomecups/HISTORY
+++ b/gnome2-libs/libgnomecups/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-07-08 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.2.3
 	  fixed WEB_SITE
