--- a/gnome3-libs/libgda5/HISTORY
+++ b/gnome3-libs/libgda5/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-01-25 Robin Cook <rcook@wyrms.net>
 	* DEPENDS: change gtksourceview to gtksourceview3
 	  changed goocanvas to goocanvas2; added mdbtools, vala, java, openssl,
