--- a/http/apache2/HISTORY
+++ b/http/apache2/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2010-08-18 Remko van der Vossen <wich@sourcemage.org>
 	* CONFLICTS: check spell_ok before persistent_read
 	             correct conflicts to apache1 and httpd-dev
