--- a/http/apache-mod_ssl/HISTORY
+++ b/http/apache-mod_ssl/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-08-18 Remko van der Vossen <wich@sourcemage.org>
 	* CONFLICTS: check spell_ok before persistent_read
 	             correct conflicts to apache1 and httpd-dev
