--- a/http/cherokee/HISTORY
+++ b/http/cherokee/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2011-01-16 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: updated spell to 1.0.16
 
