--- a/http/elog/HISTORY
+++ b/http/elog/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-04-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 2.7.6-1
 	* Makefile.diff: removed, upstream accepted modifications
