--- a/http/esehttpd/HISTORY
+++ b/http/esehttpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-02-25 Remko van der Vossen <wich@sourcemage.org>
 	* DEPENDS: updated ruby dependency to RUBY provider
 
