--- a/http/httpd-dev/HISTORY
+++ b/http/httpd-dev/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-08-18 Remko van der Vossen <wich@sourcemage.org>
 	CONFLICTS: added apache22 and xshttpd
 
