--- a/http/lighttpd/HISTORY
+++ b/http/lighttpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-08-03 Vlad Glagolev <stealth@sourcemage.org>
 	* PRE_BUILD: apply patch
 	* DEPENDS: lua51 -> LUA
