--- a/http/links-twibright/HISTORY
+++ b/http/links-twibright/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-09-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.8
 
