--- a/http/gnash/HISTORY
+++ b/http/gnash/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-05-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: giflib => GIFLIB
 
