--- a/http/links/HISTORY
+++ b/http/links/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2008-06-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.00, fixed short desc, website, added kw
 	* DEPENDS: cleaned up
