--- a/http/netsurf/HISTORY
+++ b/http/netsurf/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-11-03 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: jpeg -> JPEG
 
