--- a/http/siege/HISTORY
+++ b/http/siege/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-03-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.78
 
