--- a/http/squid/HISTORY
+++ b/http/squid/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-02-10 George Sherwood <gsherwood@sourcemage.org>
 	* DETAILS: Updated to version 3.1.19
 
