--- a/http/pavuk/HISTORY
+++ b/http/pavuk/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2007-02-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.35
 
