--- a/http/w3m/HISTORY
+++ b/http/w3m/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-06-24 Remko van der Vossen <wich@sourcemage.org>
 	* PRE_BUILD: fix build failure with recent libgc
 
