--- a/http/webcleaner/HISTORY
+++ b/http/webcleaner/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: pil -> pillow
 
