--- a/http/xshttpd/HISTORY
+++ b/http/xshttpd/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2010-10-10 Bor Kraljič <pyrobor@ver.si>
 	* johnas.gpg: added key 355F8408 from subkeys.pgp.net
 
