--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,8 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
+        * SUB_DEPENDS, PRE_SUB_DEPENDS: openssl => SSL
+
 2014-10-29 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: giflib =>  GIFLIB
 
