--- a/libs/asio/HISTORY
+++ b/libs/asio/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-01-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.10.1
 
