--- a/libs/gwenhywfar/HISTORY
+++ b/libs/gwenhywfar/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2009-12-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.11.1
 
