--- a/libs/ldns/HISTORY
+++ b/libs/ldns/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2014-05-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.6.17
 	* DEPENDS: added warning on switching openssl branches; added perl
