--- a/libs/libevent/HISTORY
+++ b/libs/libevent/HISTORY
@@ -1,3 +1,6 @@
+2014-08-19  Treeve Jelbert <treeve@sourcemage.org>
+        * DEPENDS: openssl => SSL
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.0.21
 
